--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,8 @@
   "content_scripts": [{
     "matches": ["*://github.com/*"],
     "css": ["css/content-script.css"],
-    "js": ["js/content-script.js"],
     "run_at": "document_start"
   }],
-  "icons": {
-    "16": "images/notext16.png",
-    "24": "images/notext24.png",
-    "32": "images/notext32.png",
-    "48": "images/notext48.png",
-    "64": "images/notext64.png",
-    "128": "images/text128.png"
-  },
+  "icons": {},
   "permissions": []
 }
